# bookit

./: .gitignore  README.md  pyproject.toml  rename.sh
bookit/: asgi.py  settings.py  urls.py  wsgi.py
bookit_api/: apps.py  helpers.py  urls.py
bookit_api/migrations/: 0001_initial.py  0002_auto_20241201_0229.py  0003_auto_20241206_0023.py  0004_auto_20241206_0841.py  0005_auto_20241206_0903.py  0006_auto_20241207_0309.py  0007_booking_businessservicedetails_review_schedule_service_servicecategory.py  0008_auto_20241207_2339.py  0009_auto_20241215_0024.py  0010_booking_business_service_details.py  0011_remove_booking_business.py
bookit_api/models/: __init__.py  booking.py  business.py  businessUserAssociation.py  businessemployee.py  businessservice.py  businessservicedetails.py  businessuser.py  review.py  schedule.py  service.py  servicecategory.py  user.py  usermodel.py
bookit_api/serializers/: __init__.py  booking.py  bookingserializer.py  business.py  businessUserAssociation.py  businessemployee.py  businessserializer.py  businessservice.py  businessservicedetails.py  businessuserserializer.py  review.py  reviewserializer.py  schedule.py  service.py  servicecategoryserializer.py  serviceserializer.py  user.py  userserializer.py
bookit_api/services/: bookingservice.py  businessservice.py  businessservicedetailsservice.py  businessuserservice.py  categoryservice.py  serviceservice.py  userservice.py
bookit_api/views/: __init__.py  bookingview.py  business.py  businessview.py  categoryview.py  list_users.py  serviceview.py  user.py  userview.py
